# github-action-test

./: .gitignore  Dockerfile
.github/workflows/: ci.yml
app/: pyproject.toml
app/app/: main.py
app/tests/: test_main.py
