[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.7"
aws-lambda-powertools = "^1.24.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
poethepoet = "^0.12.0"
mypy = "^0.931"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = { shell = "mypy . && pytest tests" }